--- a/Back/src/main/resources/application.properties
+++ b/Back/src/main/resources/application.properties
@@ -9,7 +9,8 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
 # Configurations
-app.base_url=/spam
+app.base_url=/mail
+app.front_domain=http://localhost:4000
 app.jwt_token_validity=21600000
 
 
