--- a/Front/package.json
+++ b/Front/package.json
@@ -61,31 +61,35 @@
   "homepage": "https://demos.creative-tim.com/black-dashboard-angular/#/dashboard",
   "private": false,
   "dependencies": {
-    "@angular/animations": "12.1.2",
-    "@angular/common": "12.1.2",
-    "@angular/compiler": "12.1.2",
-    "@angular/core": "12.1.2",
-    "@angular/forms": "12.1.2",
-    "@angular/localize": "^12.1.2",
-    "@angular/platform-browser": "12.1.2",
-    "@angular/platform-browser-dynamic": "12.1.2",
-    "@angular/router": "12.1.2",
+    "@angular/animations": "13.3.0",
+    "@angular/cdk": "^13.3.1",
+    "@angular/common": "13.3.0",
+    "@angular/compiler": "13.3.0",
+    "@angular/core": "13.3.0",
+    "@angular/forms": "13.3.0",
+    "@angular/localize": "^13.3.0",
+    "@angular/material": "^13.3.1",
+    "@angular/platform-browser": "13.3.0",
+    "@angular/platform-browser-dynamic": "13.3.0",
+    "@angular/router": "13.3.0",
     "@ng-bootstrap/ng-bootstrap": "10.0.0",
+    "bootstrap": "^5.1.3",
     "chart.js": "2.9.4",
     "core-js": "3.15.2",
+    "jquery": "^3.6.0",
     "ngx-toastr": "14.0.0",
-    "rxjs": "7.2.0",
+    "rxjs": "7.5.5",
     "tslib": "2.3.0",
     "zone.js": "0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "12.1.2",
-    "@angular/cli": "12.1.2",
-    "@angular/compiler-cli": "12.1.2",
-    "@angular/language-service": "12.1.2",
-    "@types/node": "16.3.2",
+    "@angular-devkit/build-angular": "13.3.0",
+    "@angular/cli": "13.3.0",
+    "@angular/compiler-cli": "13.3.0",
+    "@angular/language-service": "13.3.0",
     "@types/jasmine": "3.8.1",
     "@types/jasminewd2": "2.0.10",
+    "@types/node": "16.3.2",
     "codelyzer": "6.0.2",
     "jasmine-core": "3.8.0",
     "jasmine-spec-reporter": "7.0.0",
@@ -96,7 +100,6 @@
     "karma-jasmine-html-reporter": "1.7.0",
     "protractor": "7.0.0",
     "ts-node": "10.1.0",
-    "tslint": "6.1.3",
-    "typescript": "4.3.5"
+    "typescript": "4.6.3"
   }
 }
