--- a/Front/.vscode/launch.json
+++ b/Front/.vscode/launch.json
@@ -7,7 +7,8 @@
         "request": "launch",
         "preLaunchTask": "npm: start",
         "url": "http://localhost:4000",
-        "webRoot": "${workspaceFolder}"
+        "webRoot": "${workspaceFolder}",
+        "sourceMaps": true
       },
       {
         "name": "ng test",
