--- a/Front/package.json
+++ b/Front/package.json
@@ -62,7 +62,7 @@
   "private": false,
   "dependencies": {
     "@angular/animations": "13.3.0",
-    "@angular/cdk": "^13.3.1",
+    "@angular/cdk": "^13.3.2",
     "@angular/common": "13.3.0",
     "@angular/compiler": "13.3.0",
     "@angular/core": "13.3.0",
@@ -72,11 +72,17 @@
     "@angular/platform-browser": "13.3.0",
     "@angular/platform-browser-dynamic": "13.3.0",
     "@angular/router": "13.3.0",
+    "@fortawesome/fontawesome-free": "^6.1.1",
     "@ng-bootstrap/ng-bootstrap": "10.0.0",
+    "@types/chart.js": "^2.9.36",
+    "angular-bootstrap-md": "^13.0.0",
+    "animate.css": "^4.1.1",
     "bootstrap": "^5.1.3",
-    "chart.js": "2.9.4",
+    "chart.js": "^2.5.0",
     "core-js": "3.15.2",
+    "hammerjs": "^2.0.8",
     "jquery": "^3.6.0",
+    "mdb-ui-kit": "^3.11.0",
     "ngx-toastr": "14.0.0",
     "rxjs": "7.5.5",
     "tslib": "2.3.0",
@@ -100,6 +106,7 @@
     "karma-jasmine-html-reporter": "1.7.0",
     "protractor": "7.0.0",
     "ts-node": "10.1.0",
-    "typescript": "4.6.3"
+    "tslint": "^6.1.3",
+    "typescript": "^4.6.3"
   }
 }
